# AFB-LLM-Compression-Trade-off-Evaluator

./: .gitignore  101425.md  3.2-1BBaseResult.2json  3.21BBaseResult4.json  Dockerfile  FullrunofBase.txt  Llama3.2BaseResult5.json  README.md  ServingContainerRequirements.txt  codebleu_dashboard_app.py  generate_humaneval_evalplus.py  knowledgedistillation.py  llama3.2-1BResult3.json  pruning.py  quantize_llama_gptq.py  serve.py
src/: .gitignore  Dockerfile  README.md  accelerate_config.yaml  dashboard.py  deepspeed_config.json  docker-compose.yml  pyproject.toml  quantize_llama_gptq.ipynb  requirements.txt  requirements2.txt  why_QLoRA_won't_work.md
src/data/: code_prompts.json  code_references.json  train.jsonl
src/docker/: Dockerfile  README.md  docker-compose.yml  main.py  pack_quant.py  quantize_llama_gptq.py  requirements.txt  serve_llama3_base.py
src/frontend/: package-lock.json
src/lora_dryrun_test/: metrics_1761154245.json  metrics_1761168065.json
src/lora_out_codeparrot/: README.md  metrics_1760728470.json
src/lora_out_codeparrot_PROPER/: adapter_config.json  metrics_1761198304.json
src/lora_out_deepseek_1b/: metrics_1761454043.json
src/lora_out_deepseek_1b_v2/: README.md  adapter_config.json  metrics_1761523237.json
src/lora_out_deepseek_1b_v3/: README.md  metrics_1761590263.json  metrics_1761722982.json
src/results/: README.md  Training_&_Inference_Run_4.md  result_1.json  result_3.json  result_4.json  result_5.json
src/scripts/: benchmark_lora_vs_base.py  cuda_compute_capability.py  deepseek_coder1B_train_lora.py  eval_and_profile.py  (+12 more)
(+42 files in other folders)
