[tool]
name = "docker-python-project"
version = "0.1.0"
description = "A Python project with Docker support"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
dependencies = [
    # Add your project dependencies here
]

[tool.poetry.dev-dependencies]
# Add your development dependencies here

[tool.poetry.scripts]
# Define any command line scripts here if needed